--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-       "test": "jest --coverage"
+    "test": "jest --coverage"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -22,9 +22,11 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@vitejs/plugin-react": "^4.4.1",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^26.1.0"
+    "jsdom": "^26.1.0",
+    "vite": "^6.3.5"
   }
 }
