--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "journal-app-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "mindful-journal",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "jest --coverage"
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@babel/preset-env": "^7.22.20",
+    "babel-jest": "^29.7.0",
+    "@testing-library/jest-dom": "^6.1.3"
   },
   "jest": {
     "testEnvironment": "jsdom",
+    "moduleFileExtensions": ["js", "json"],
     "transform": {
       "^.+\\.js$": "babel-jest"
-    }
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@vitejs/plugin-react": "^4.4.1",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^26.1.0",
-    "vite": "^6.3.5"
+    },
+    "setupFilesAfterEnv": ["./src/tests/setup.js"]
   }
 }
