--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "mindful-journal",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@testing-library/jest-dom": "^6.1.3",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@babel/preset-env": "^7.22.20",
-    "babel-jest": "^29.7.0",
-    "@testing-library/jest-dom": "^6.1.3"
+    "vite": "^5.4.8"
   },
   "jest": {
     "testEnvironment": "jsdom",
